--- a/BlenderMRView/com.holomoto.blender_mr_view/package.json
+++ b/BlenderMRView/com.holomoto.blender_mr_view/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.holomoto.blender_mr_view",
-  "version": "0.0.13",
-  "displayName": "BlenderMRViewforXR",
+  "version": "0.0.9",
+  "displayName": "MixedRealityModelingTools",
   "unity": "2021.2",
   "repository": {
     "type": "git",
